--- a/app/Resources/views/amp/amp-theme/index.html.twig
+++ b/app/Resources/views/amp/amp-theme/index.html.twig
@@ -162,7 +162,7 @@
                 </div>
 
                 {# List tags #}
-                {{ include('amp/amp-theme/tags.html.twig') }}
+                {# {{ include('amp/amp-theme/tags.html.twig') }} #}
 
                 {# List related #}
                 {{ include('amp/amp-theme/related.html.twig') }}
