--- a/web/assets/scss/front/global/_base_elements.scss
+++ b/web/assets/scss/front/global/_base_elements.scss
@@ -36,6 +36,18 @@ body {
     @media only screen and (min-width: 992px) {
         width: 1200px;
     }
+
+    @media all and (device-width: 1024px) and (device-height: 768px) and (orientation:landscape) {
+        width: 1024px;
+    }
+
+    @media all and (device-width: 1024px) and (device-height: 1366px) and (orientation:portrait) {
+        width: 1024px;
+    }
+
+    @media all and (device-width: 1180px) and (device-height: 820px) and (orientation:landscape) {
+        width: 1024px;
+    }
 }
 
 .td-wrapper {
