--- a/web/assets/scss/front/global/_header.scss
+++ b/web/assets/scss/front/global/_header.scss
@@ -4,6 +4,18 @@
     color: $white;
     height: 40px;
 
+    @media all and (device-width: 1024px) and (device-height: 768px) and (orientation:landscape) {
+        display: none;
+    }
+
+    @media all and (device-width: 1024px) and (device-height: 1366px) and (orientation:portrait) {
+        display: none;
+    }
+
+    @media all and (device-width: 1180px) and (device-height: 820px) and (orientation:landscape) {
+        display: none;
+    }
+
     .col-md-6 {
         &.marquee {
             height: 40px;
