--- a/web/assets/scss/front/global/_menu.scss
+++ b/web/assets/scss/front/global/_menu.scss
@@ -175,6 +175,18 @@
                     margin: 0;
                     padding: 0;
 
+                    @media all and (device-width: 1024px) and (device-height: 768px) and (orientation:landscape) {
+                        display: none;
+                    }
+
+                    @media all and (device-width: 1024px) and (device-height: 1366px) and (orientation:portrait) {
+                        display: none;
+                    }
+
+                    @media all and (device-width: 1180px) and (device-height: 820px) and (orientation:landscape) {
+                        display: none;
+                    }
+
                     .form-control {
                         height: 30px;
                         border: none;
