--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -105,6 +105,19 @@
         {% endblock %}
 
         {% block structuredWebSite %}
+            <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "WebSite",
+                "name": "Xây Dựng Kim Anh",
+                "url": "https://xaydungkimanh.com/",
+                "potentialAction": {
+                    "@type": "SearchAction",
+                    "target": "https://xaydungkimanh.com/search?q={search_term_string}",
+                    "query-input": "required name=search_term_string"
+                }
+            }
+            </script>
         {% endblock %}
 
         {{ get_setting('googleAnalytic')|raw }}
