--- a/app/Resources/views/user/list.html.twig
+++ b/app/Resources/views/user/list.html.twig
@@ -5,14 +5,14 @@
     <noscript><link rel="stylesheet" href="{{ absolute_url(asset('build/css/list.css')) }}" ></noscript>
 {% endblock %}
 
-{% block title %}{{ (category.getPageTitle() is not null ? category.getPageTitle() : category.getName()) ~ ' - Trang ' ~ pagination.currentPageNumber }}{% endblock %}
-{% block description %}{{ (category.getPageDescription() is not null ? category.getPageDescription() : category.getName()) ~ ' - Trang ' ~ pagination.currentPageNumber }}{% endblock %}
-{% block keyword %}{{ category.getPageKeyword() }}{% endblock %}
+{% block title %}{{ user.getName() ~ ' - Xây Dựng Kim Anh' ~ (pagination.currentPageNumber > 1 ? ' - Trang ' ~ pagination.currentPageNumber : '') }}{% endblock %}
+{% block description %}{{ 'Danh sách các bài blog chuyên về lĩnh vực Xây Dựng, giúp bạn có thêm kỹ năng về xây dựng thành công.' ~ (pagination.currentPageNumber > 1 ? ' - Trang ' ~ pagination.currentPageNumber : '') }}{% endblock %}
+{% block keyword %}{{ '' }}{% endblock %}
 
 {% block structuredOpenGraph %}
     <meta property="og:type" content="object" />
-    <meta property="og:title" content="{{ (category.getPageTitle() is not null ? category.getPageTitle() : category.getName()) ~ ' - Trang ' ~ pagination.currentPageNumber }}" />
-    <meta property="og:description" content="{{ category.getPageDescription() ~ ' - Trang ' ~ pagination.currentPageNumber }}" />
+    <meta property="og:title" content="{{ user.getName() ~ ' - Xây Dựng Kim Anh' ~ (pagination.currentPageNumber > 1 ? ' - Trang ' ~ pagination.currentPageNumber : '') }}" />
+    <meta property="og:description" content="{{ 'Danh sách các bài blog chuyên về lĩnh vực Xây Dựng, giúp bạn có thêm kỹ năng về xây dựng thành công.' ~ (pagination.currentPageNumber > 1 ? ' - Trang ' ~ pagination.currentPageNumber : '') }}" />
     {% if pagination.currentPageNumber == 1 and pagination.pageCount > 1 %}
         <link rel="next" href="{{ baseUrl ~ '/' ~ (pagination.currentPageNumber + 1) }}" />
     {% endif %}
@@ -38,9 +38,8 @@
 {% endblock %}
 
 {% block body %}
-    {# breadcrumbs #}
     {{ include('news/components/breadcrumbs.html.twig',
-        { type: 'category', title: category.getName(), description: category.getDescription() })
+        { type: 'category', title: user.getName(), description: 'Danh sách các bài blog chuyên về Xây Dựng, giúp bạn có thêm kỹ năng về xây dựng thành công.' })
     }}
     
     <div class="container wrapper-container">
@@ -51,20 +50,6 @@
                     {# Sort items #}
                     {% if get_setting('isShowSortOnCategory') %}
                         {{ include('news/components/sort.html.twig') }}
-                    {% endif %}
-
-                    {% if listCategories != NULL %}
-                        <div class="list-news-category">
-                            <div class="row">
-                                {% for cat in listCategories %}
-                                    <div class="col-xs-6 col-sm-4 col-md-3">
-                                        <div class="category-item">
-                                            <a href="{{ path('list_category', {'level1': category.getUrl(), 'level2': cat.getUrl() }) }}">{{ cat.getName() }}</a>
-                                        </div>
-                                    </div>
-                                {% endfor %}
-                            </div>
-                        </div>
                     {% endif %}
 
                     <div class="list-news-items">
@@ -82,9 +67,5 @@
                 {% endif %}
             </div>
         </div>
-        
-        {{ render(controller(
-            'AppBundle:News:listNewsByCategory', { 'categoryId': 5 }
-        )) }}
     </div>
 {% endblock %}
